WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
263470
[WebGPU] topologyType returns wrong result for WGPUPrimitiveTopology_LineList
https://bugs.webkit.org/show_bug.cgi?id=263470
Summary
[WebGPU] topologyType returns wrong result for WGPUPrimitiveTopology_LineList
Mike Wyrzykowski
Reported
2023-10-20 14:06:51 PDT
[WebGPU] topologyType returns wrong result for WGPUPrimitiveTopology_LineList
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-20 14:07:26 PDT
<
rdar://problem/117278821
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug