[WebGPU] topologyType returns wrong result for WGPUPrimitiveTopology_LineList https://bugs.webkit.org/show_bug.cgi?id=263470> <radar://117278821>

Reviewed by Tadeu Zagallo.

Looks like a typo implementing the switch statement, correct the return
result for line list.

* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::topologyType):

Canonical link: https://commits.webkit.org/269657@main